update on styling on update-styling branch

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
                <button type="submit">Submit</button>
         </form>
     </div>    
+    <h3 style="color: blueviolet;">Hello World</h3>
 </body>
 </html>
