add new msg in add-content branch

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
                <button type="submit">Submit</button>
         </form>
     </div>    
+    <h3>Added a new content in add-content branch</h3>
 </body>
 </html>
